Version 3.2.0
=============================================================

    - Feature: Adding compatibility with php 7.3
    - Feature: [import] Protection of the import of anonymized orders
    - Feature: Refactoring and optimization of the connector class
    - Feature: Optimization of API calls for synchronisation of orders and actions
    - Bugfix: Refactoring and optimization of dates with the correct locale

=============================================================
Version 3.1.4
=============================================================

    - Bugfix: [import] Removed compatibility with version 3 of the Mondial Relay plugin

=============================================================
Version 3.1.3
=============================================================

    - Feature: [import] vat number registration on delivery and billing addresses
    - Bugfix: Recovery of all active shops when searching by token
    - Bugfix: Implementation of dynamic link in templates for JS and CSS scripts
    - Bugfix: [import] Use of semantic matching when shipping methods are empty

=============================================================
Version 3.1.2
=============================================================

    - Feature: [export] Refactoring and optimization of product data recovery
    - Feature: [export] Add isbn field in export feed for PrestaShop 1.7
    - Bugfix: [import] Moving email templates for PrestaShop 1.7
    - Bugfix: Fixed the module update process

=============================================================
Version 3.1.1
=============================================================

    - Feature: [import] Optimization of the order recovery system
    - Feature: [import] Setting up a cache for synchronizing catalogs ids
    - Feature: [action] Refactoring and optimization of actions on orders
    - Feature: [import] Add semantic search for carrier match
    - Feature: [export] Add price_wholesale field in export feed