@@ -15,7 +15,7 @@
 /backward_compatibility/index.php|eb18f895c85303c2ced77482ec4ab525
 /classes/controllers/LengowOrderSettingController.php|8539ae515770428d536c33f2ba30a53f
 /classes/controllers/LengowOrderController.php|5bea53e871977465eba915086018d4f9
-/classes/controllers/LengowController.php|d1af8573abf20bf980edef7b33c52182
+/classes/controllers/LengowController.php|74f7bcc04483fcaacf3f6f8d093f75a3
 /classes/controllers/LengowLegalsController.php|f8cec875666fac608deea6380cd75925
 /classes/controllers/LengowMainSettingController.php|ec14c4180077e287a7093bc8c981a0e2
 /classes/controllers/LengowFeedController.php|bf047f4aa510675417a8971cf8d85c31
@@ -29,10 +29,10 @@
 /classes/models/LengowMain.php|b893b08562f01d2cac591172b49dbedd
 /classes/models/LengowException.php|c25029800cbc155b26375415141e8824
 /classes/models/LengowFeed.php|f612190b776f2fd00742cc5c8c8b1148
-/classes/models/LengowConnector.php|17f17928019005eae8679281e2eaa77e
+/classes/models/LengowConnector.php|cd3125fbea9f529e042d08a984ca15b8
 /classes/models/LengowTaxRule.php|3b761db12eff6f1d7b0faf9d5cde3945
 /classes/models/LengowCustomer.php|ebaa7d15d5e980f432d7bc71f786e81b
-/classes/models/LengowSync.php|bc00bf4cf55b800a003687ed5b10a34c
+/classes/models/LengowSync.php|f6c57e7bd994d847ced72cb223ba96f4
 /classes/models/LengowEmployee.php|fad8fea4a3593f527a3e5e30608189a9
 /classes/models/LengowLog.php|ea3ae23a2d54d9f77cb0372b4362cc42
 /classes/models/LengowCheck.php|645b734611ce3ee8d89323a73ec83b8e
@@ -51,7 +51,7 @@
 /classes/models/LengowShop.php|d8bfcd1f9186faeb41e2f804c0583d2c
 /classes/models/LengowAction.php|72ee459a3f74c48e929af8c68d138f2c
 /classes/models/LengowTool.php|1719200650089f8e324a44a9aa094196
-/classes/models/LengowConfiguration.php|8d5e8cc31cc56d407c55c03fc03407f0
+/classes/models/LengowConfiguration.php|f1752c153684c58ebdc671ccd8f1d5f2
 /classes/models/LengowLink.php|952925148a27a6c325b2420a17414020
 /classes/models/LengowOrder.php|ba2203de89f83dabd2ab47dc3e649dd5
 /classes/models/LengowTranslation.php|4cc02547d19866717531bf8c9c21dd0e
@@ -98,16 +98,16 @@
 /views/css/lengow-tab.css|5b6066640ae15dce94cd2225d84cec50
 /views/css/select2.css|8969ac4614d64a13dfc32e1eb4e731f7
 /views/css/bootstrap-datepicker.css|d5260247b97663d887f4efe8ec894353
-/views/css/lengow-components.css|edec176851cfb40c2718e9c2d2b3b7d6
+/views/css/lengow-components.css|42adc02fb175e461a7ee9df5fd3d4e6c
 /views/css/bootstrap-3.3.6.css|2f624089c65f12185e79925bc5a7fc42
 /views/css/toolbox.css|c266f5bde976004671dc87bb92014ed7
 /views/css/lengow_bootstrap_min-980.css|72857f0e7af8daf9de2f1ef7cc708ddf
-/views/css/lengow-pages.css|2038ef2d36bcac6e9b6271cf417bb67f
+/views/css/lengow-pages.css|75a549e94e0c3a9cfec53459306fdc61
 /views/css/lengow-layout.css|242879fdded9ae018411ede8986ca922
 /views/css/lengow_bootstrap_15.css|88276005f3939f2967b999f30b0ffcf6
 /views/css/index.php|eb18f895c85303c2ced77482ec4ab525
 /views/js/bootstrap-datepicker.js|5e12aafeadd2893b88641fa55e102dd7
-/views/js/lengow/home.js|3f44258b8eecf627bc7a17d001e5169c
+/views/js/lengow/home.js|b352b264ff2ba173ecf2af9b574899de
 /views/js/lengow/main_setting.js|7a69fd18a2a89a0c54098bae7b9fb849
 /views/js/lengow/admin.js|0967ea56202263566d29283e40c0dcf1
 /views/js/lengow/order.js|719bb81b09a100a8dc2ce59fc95d553a
@@ -393,7 +393,7 @@
 /views/img/flag/PK.png|bb24b773e81e7daebc3ba3e263e67c20
 /views/templates/front/tagpage.tpl|f040d02eb2f79ed7d50e72f7f707db0e
 /views/templates/front/index.php|eb18f895c85303c2ced77482ec4ab525
-/views/templates/admin/header.tpl|db59a6a78798c2b7027bd23215a418c3
+/views/templates/admin/header.tpl|63206f3b3e64d0e1e68b8fc332c9a1bb
 /views/templates/admin/lengow_order/layout.tpl|901527885b6fdd8c04949bfe750e438d
 /views/templates/admin/lengow_order/helpers/view/warning_message.tpl|821acd8febe35f9381d9462ed36e3fca
 /views/templates/admin/lengow_order/helpers/view/header_toolbox.tpl|67a959f838fc239e683858f2736a35a5
@@ -428,7 +428,7 @@
 /views/templates/admin/lengow_main_setting/helpers/view/index.php|eb18f895c85303c2ced77482ec4ab525
 /views/templates/admin/lengow_main_setting/helpers/index.php|eb18f895c85303c2ced77482ec4ab525
 /views/templates/admin/lengow_main_setting/index.php|eb18f895c85303c2ced77482ec4ab525
-/views/templates/admin/footer.tpl|22ba08071b2c0adbde9c5af77e50c54a
+/views/templates/admin/footer.tpl|a0a5b72ac0acdd3318d0ef46965ebe61
 /views/templates/admin/header_order.tpl|193a1516ca4adf9af41ae2fca1e72ad8
 /views/templates/admin/lengow_legals/layout.tpl|8296463aac5333e3d045024628ee14d7
 /views/templates/admin/lengow_legals/helpers/view/view.tpl|07513f961e584c082fbd38d5f1478ebe
@@ -439,9 +439,9 @@
 /views/templates/admin/order/info_16.tpl|f93e63138d7b903f007d0e3ad5d380ed
 /views/templates/admin/order/index.php|eb18f895c85303c2ced77482ec4ab525
 /views/templates/admin/lengow_home/layout.tpl|d4e23ff27234d8621b4fc909e1aea5dd
-/views/templates/admin/lengow_home/helpers/view/new.tpl|75de0d0f925f5841141ef80e117b497f
-/views/templates/admin/lengow_home/helpers/view/status.tpl|fc12cede1f795c75973c2f9bdeed9606
-/views/templates/admin/lengow_home/helpers/view/connect.tpl|65e0de091501eb64a6cdf7bbe3901577
+/views/templates/admin/lengow_home/helpers/view/new.tpl|e422f0252252c3e93efd12247f4957d7
+/views/templates/admin/lengow_home/helpers/view/status.tpl|ee6df62fc87879b84319d792f1ce0f8a
+/views/templates/admin/lengow_home/helpers/view/connect.tpl|85be52fcab09bc55e63121b8ec14df6d
 /views/templates/admin/lengow_home/helpers/view/view.tpl|066967637085243ffbfe34a5da6f038c
 /views/templates/admin/lengow_home/helpers/view/index.php|eb18f895c85303c2ced77482ec4ab525
 /views/templates/admin/lengow_home/helpers/index.php|eb18f895c85303c2ced77482ec4ab525
@@ -457,5 +457,5 @@
 /views/fonts/index.php|eb18f895c85303c2ced77482ec4ab525
 /views/index.php|eb18f895c85303c2ced77482ec4ab525
 /webservice/export.php|7fffb6751bcf5797ef0439c75698119c
-/webservice/cron.php|59a7e74bcd166b7bd800091389b326ff
+/webservice/cron.php|f6eba6b10663fe09ae7bf5480b512c42
 /webservice/index.php|eb18f895c85303c2ced77482ec4ab525
