@@ -24,14 +24,24 @@
                 {$locale->t('menu.preprod_active')|escape:'htmlall':'UTF-8'}
             </div>
         {/if}
-        {if $merchantStatus['type'] == 'free_trial' && !$merchantStatus['expired']}
-            <p class="text-right" id="menucountertrial">
-                {$locale->t('menu.counter', ['counter' => $merchantStatus['day']])|escape:'htmlall':'UTF-8'}
-                <a href="http://my.lengow.io/" target="_blank">
-                    {$locale->t('menu.upgrade_account')|escape:'htmlall':'UTF-8'}
-                </a>
-            </p>
-        {/if}
+        <div class="lgw-row">
+            <div class="text-left lgw-col-6" id="alert-plugin-available">
+                {if $pluginData && $pluginData['version'] > $lengowVersion}
+                    {$locale->t('menu.new_version_available', ['version' => $pluginData['version']])|escape:'htmlall':'UTF-8'}
+                    <a href="//my.{$lengowUrl|escape:'htmlall':'UTF-8'}{$pluginData['download_link']|escape:'htmlall':'UTF-8'}" target="_blank">
+                        {$locale->t('menu.download_plugin')|escape:'htmlall':'UTF-8'}
+                    </a>
+                {/if}
+            </div>
+            <div class="text-right lgw-col-6" id="alert-counter-trial">
+                {if $merchantStatus['type'] == 'free_trial' && !$merchantStatus['expired']}
+                    {$locale->t('menu.counter', ['counter' => $merchantStatus['day']])|escape:'htmlall':'UTF-8'}
+                    <a href="http://my.{$lengowUrl|escape:'htmlall':'UTF-8'}" target="_blank">
+                        {$locale->t('menu.upgrade_account')|escape:'htmlall':'UTF-8'}
+                    </a>
+                {/if}
+            </div>
+        </div>
         <div class="lgw-box lgw-home-header text-center">
             <img src="{$lengowPathUri|escape:'htmlall':'UTF-8'}views/img/lengow-white-big.png" alt="lengow">
             <h1>{$locale->t('dashboard.screen.welcome_back')|escape:'htmlall':'UTF-8'}</h1>
