@@ -141,6 +141,10 @@ if (Tools::getIsset('get_sync') && Tools::getValue('get_sync') == 1) {
     if ($sync === LengowSync::SYNC_STATUS_ACCOUNT) {
         LengowSync::getStatusAccount($force, $logOutput);
     }
+    // sync plugin data between Lengow and Prestashop
+    if ($sync === LengowSync::SYNC_PLUGIN_DATA) {
+        LengowSync::getPluginData($force, $logOutput);
+    }
     // sync option is not valid
     if ($sync && !in_array($sync, LengowSync::$syncActions)) {
         header('HTTP/1.1 400 Bad Request');
