@@ -6,6 +6,7 @@ Version 3.2.0
     - Feature: [import] Protection of the import of anonymized orders
     - Feature: Refactoring and optimization of the connector class
     - Feature: Optimization of API calls for synchronisation of orders and actions
+    - Feature: Display of an alert when the plugin is no longer up to date
     - Bugfix: Refactoring and optimization of dates with the correct locale
 
 =============================================================
